--- a/sber/src/index.css
+++ b/sber/src/index.css
@@ -72,7 +72,7 @@ button {
 	font-size: 1em;
 	font-weight: 500;
 	font-family: inherit;
-	background-color: var(--lighter-background-color);
+	background-color: var(--background-color);
 	cursor: pointer;
 	transition: border-color 0.25s;
 }
@@ -88,12 +88,14 @@ main{
 	display: flex;
 	flex-flow: column;
 	align-items: center;
+	gap: 20px;
 }
 
 
 .main_form{
 	display: grid;
 	grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr;
 	gap: 10px;
 	grid-auto-flow: column;
 	justify-content: center;
@@ -102,7 +104,7 @@ main{
 	width: 100%;
 	background-color: var(--lighter-background-color);
 	border-radius: 8px;
-	border: 2px solid var(--accent-color);
+	border: 2px solid rgba(0,0,0,0.9);
 	padding: 0.6em 1.2em;
 	font-size: 0.9em;
 	font-weight: 500;
@@ -123,6 +125,19 @@ main{
 	height: 80%;
 	border-radius: 8px;
 }
+.main_form textarea{
+	background-color: var(--background-color);
+	border: 2px solid var(--sub-background-color);
+	padding: 0.7em 1.4em;
+	width: 80%;
+	height: 80%;
+	border-radius: 8px;
+	box-sizing: border-box;
+	vertical-align: top;
+	resize: vertical;
+	overflow:hidden;
+	height: 5em;
+}
 .main_form .file_input{
 	background-color: var(--background-color);
 	border: 2px solid var(--sub-background-color);
@@ -132,12 +147,17 @@ main{
 	border-radius: 8px;
 }
 
+.main_form .file_input svg{
+	margin-left: 5px;
+}
 .form_logo{
-	grid-column: 1 / 4;
+	grid-column: 1 / 5;
+	height: 10px;
 	display: flex;
+	align-items: start;
 }
 .form_logo img{
-	width: 35%;
+	width: 80%;
 }
 
 menu{
