--- a/frontend/src/components/UI/Header/Header.module.css
+++ b/frontend/src/components/UI/Header/Header.module.css
@@ -13,6 +13,7 @@ header{
     align-items: center;
     justify-content: space-around;
     padding: 5px;
+    z-index: 2;
 }
 .logo{
     height: 200%;
@@ -22,6 +23,12 @@ header{
 }
 .lk{
     font-size: xx-large;
+    height: 50%;
+}
+.lk img{
+    height: 100%;
+    border-radius: 100%;
+    border: 1px solid transparent;
 }
 .lk a:any-link{
     color: var(--accent-color);
